--- a/srlc/srl/templates/srl/il_leaderboard_expanded.html
+++ b/srlc/srl/templates/srl/il_leaderboard_expanded.html
@@ -8,16 +8,16 @@
         <meta name="keywords" content="{{ ENV_WEBSITE_KEYWORDS }}">
 
         {% if "/ils" in request.path %}
-            {% if game_abbr == "thps12" %}
+            {% if game_slug == "thps12" %}
                 <title>THPS1+2 IL Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% else %}
-                <title>{{ game_abbr|upper }} IL Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
+                <title>{{ game_slug|upper }} IL Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% endif %}
         {% else %}
-            {% if game_abbr == "thps12" %}
+            {% if game_slug == "thps12" %}
                 <title>THPS1+2 Full Game Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% else %}
-                <title>{{ game_abbr|upper }} Full Game Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
+                <title>{{ game_slug|upper }} Full Game Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% endif %}
         {% endif %}
 
@@ -105,7 +105,7 @@
                                 </tr>
                             {% endfor %}
                         </tbody>
-                        {% if game_abbr == "thps4" %}
+                        {% if game_slug == "thps4" %}
                             <tbody>
                                 <tr>
                                     <td colspan="2" style="font-size:smaller!important;">*Excluding "Zoo - Feed the Hippos"</td>
