--- a/srlc/srl/templates/srl/footer.html
+++ b/srlc/srl/templates/srl/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-secondary text-black text-center text-md-start">
     <div class="text-center" style="background-color: rgba(255,255,255,.85);font-size:xx-small">
         © 2022-2025 Copyright thps.run<br />
-        • <a href="/privacy" class="text-black">Privacy Policy</a> • <a href="/changelog" class="text-black">Changelog</a> • <a href="/faq" class="text-black">FAQ</a> •<br />
+        • <a href="/privacy" class="text-black">Privacy Policy</a> • <a href="/changelog" class="text-black" target="_blank">Changelog</a> • <a href="/faq" class="text-black">FAQ</a> •<br />
         thps.run is an independent fan website and is not affiliated with, endorsed by, or in any way officially connected with the Tony Hawk's Pro Skater franchise, its developers, Activision, or any of its subsidiaries. 
         All trademarks, game names, skater names, and logos appearing on the site are the property of their respective owners. Any reference to the Tony Hawk's Pro Skater game is for descriptive purposes only and does not imply any association with or endorsement by the game's creators.
     </div>
